versions/v1.3/modules/en/pages/introduction/glossary.adoc
= Glossary
:revdate: 2025-06-18
:page-revdate: {revdate}

== *guest cluster* / *guest Kubernetes cluster*

Group of integrated Kubernetes worker machines that run in virtual machines on top of a {harvester-product-name} cluster.

You can create RKE1, RKE2, and K3s guest clusters using the {harvester-product-name} and {rancher-product-name} interfaces. Creating guest clusters involves pulling images from either the internet or a private registry.

Guest clusters form the main infrastructure for running container workloads. Certain versions of {harvester-product-name} and {rancher-product-name} allow you to deploy container workloads xref:/integrations/rancher/rancher-integration.adoc#_bare_metal_container_workload_support_experimental[directly to {harvester-product-name} clusters] (with some limitations).

== *guest node* / *guest cluster node*

Kubernetes worker virtual machine that uses guest cluster resources to run container workloads.

Guest nodes are managed through a control plane that controls pod-related activity and maintains the desired cluster state.

== *{harvester-product-name} cluster*

Group of integrated physical servers (hosts) on which the {harvester-product-name} hypervisor is installed. These servers collectively manage compute, memory, and storage resources to provide an environment for running virtual machines.

A three-node cluster is required to fully realize the multi-node features of {harvester-product-name}, particularly high availability. The latest versions allow you to create clusters with two management nodes and one xref:/hosts/witness-node.adoc[witness node] (and optionally, one or more worker nodes). You can also create xref:/installation-setup/single-node-clusters.adoc[single-node clusters] that support most features (excluding high availability, multi-replica support, and live migration).

{harvester-product-name} clusters can be imported into and managed by {rancher-product-name}. Within this context, an imported {harvester-product-name} cluster is known as a "managed cluster" or "downstream user cluster" (often abbreviated to "downstream cluster"). The term refers to any Kubernetes cluster that is connected to a {rancher-product-name} server.

Certain versions of {harvester-product-name} and {rancher-product-name} allow you to deploy container workloads directly to {harvester-product-name} clusters (with some limitations). When this xref:/integrations/rancher/rancher-integration.adoc#_bare_metal_container_workload_support_experimental[experimental feature] is enabled, container workloads seamlessly interact with virtual machine workloads.

== *{harvester-product-name} hypervisor*

Specialized operating system and xref:./overview.adoc#_architecture[software stack] that runs on a single physical server.

== *{harvester-product-name} node*

Physical server on which the {harvester-product-name} hypervisor is installed.

Each node that joins a {harvester-product-name} cluster must be assigned a xref:/hosts/hosts.adoc#_role_management[role] that determines the functions the node can perform within the cluster. All {harvester-product-name} nodes process data but not all can store data.

== *Harvester Node Driver*

xref:/integrations/rancher/node-driver/node-driver.adoc[Driver] that {rancher-product-name} uses to provision virtual machines in a {harvester-product-name} cluster, and to launch and manage guest Kubernetes clusters on top of those virtual machines.
